<resources>
    <string name="app_name">SauApp</string>
    <string name="sample">Сөз</string>
    <string name="insert_the_word">Введите слово</string>
    <string name="sp1">Септік / Падеж:</string>
    <string name="zl1">Жақ / Лицо:</string>
    <string name="km1">Көпше түрі / Множественное число</string>
    <string-array name="septik_array">
        <item>Атау - не?</item>
        <item>Ілік - ненің?</item>
        <item>Барыс - неге?</item>
        <item>Табыс - нені?</item>
        <item>Жатыс - неде?</item>
        <item>Шығыс - неден?</item>
        <item>Көмектес - немен?</item>
    </string-array>
    <string-array name="zhak_array">
        <item>Тәуелді емес</item>
        <item>I(ж) Менің</item>
        <item>II(ж) Сенің</item>
        <item>II(ж) Сіздің</item>
        <item>III(ж) Оның</item>
        <item>I(к) Біздің</item>
        <item>II(к) Сендердің</item>
        <item>II(к) Сіздердің</item>
        <item>III(к) Олардың</item>
    </string-array>
    <string-array name="verb_zhak_array">
        <item>I(ж) Мен</item>
        <item>II(ж) Сен</item>
        <item>II(ж) Сіз</item>
        <item>III(ж) Ол</item>
        <item>I(к) Біз</item>
        <item>II(к) Сендер</item>
        <item>II(к) Сіздер</item>
        <item>III(к) Олар</item>
    </string-array>
    <string-array name="tense_array">
        <item>Осы / Настоящее</item>
        <item>Болжалды келер / Предположительное будущее</item>
        <item>Мақсатты келер / Намеревающее будущее</item>
        <item>Ауыспалы келер / Переходное будущее</item>
        <item>Жедел өткен / Недавно прошедшее</item>
        <item>Бұрынғы өткен / Давно прошедшее</item>
        <item>Ауыспалы өткен / Переходное прошедшее</item>
        <item>Шартты рай / Условное наклонение</item>
        <item>Бүйрық рай / Повелительное наклонение</item>
        <item>Қалау рай / Желательное наклонение</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_verb">Жасау</string>
    <string name="sample_latin_verb">zhasau</string>
    <string name="Ә">Ә</string>
    <string name="І">І</string>
    <string name="Ң">Ң</string>
    <string name="Ғ">Ғ</string>
    <string name="Ү">Ү</string>
    <string name="Ұ">Ұ</string>
    <string name="Қ">Қ</string>
    <string name="Ө">Ө</string>
    <string name="Һ">Һ</string>
    <string name="actionbar_spinner">ActionBar Spinner</string>
    <string-array name="word_types">
        <item>Зат есім</item>
        <item>Етістік</item>
    </string-array>
</resources>
